<package>
  <name>cl_tf_datatypes</name>
  <version>0.2.5</version>
  <description>
    Implementation of TF datatypes
  </description>

  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>

  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/cl_tf_datatypes</url>
  <url type="bugtracker">https://github.com/ros/roslisp_common/issues</url>
  <url type="repository">https://github.com/ros/roslisp_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>
  <build_depend>cl_transforms</build_depend>
  <build_depend>roslisp</build_depend>

  <run_depend>sbcl</run_depend> 
  <run_depend>cl_transforms</run_depend> 
  <run_depend>roslisp</run_depend> 

</package>
