<package>
  <name>cl_transforms</name>
  <version>0.2.6</version>
  <description>
    Homogeneous transform library for Common Lisp.
  </description>

  <author>Bhaskara Marthi</author>
  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>

  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/cl_transforms</url>
  <url type="bugtracker">https://github.com/ros/roslisp_common/issues</url>
  <url type="repository">https://github.com/ros/roslisp_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>
  <build_depend>cl_utils</build_depend>
  <run_depend>sbcl</run_depend> 
  <run_depend>cl_utils</run_depend> 
</package>


