<package>
  <name>cl_transforms_stamped</name>
  <version>0.2.6</version>
  <description>
    Implementation of TF datatypes
  </description>

  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>

  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/cl_transforms_stamped</url>
  <url type="bugtracker">https://github.com/ros/roslisp_common/issues</url>
  <url type="repository">https://github.com/ros/roslisp_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>
  <build_depend>cl_transforms</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>sbcl</run_depend>
  <run_depend>cl_transforms</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
