<package>
  <name>cl_urdf</name>
  <version>0.2.6</version>
  <description>

     cl_urdf

  </description>
  <author>Lorenz Moesenlechner</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/cl_urdf</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>cl_transforms</build_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>cl_transforms</run_depend>

</package>
