<package>
  <name>cl_utils</name>
  <version>0.2.7</version>
  <description>
    Common Lisp utility libraries
  </description>

  <author>Bhaskara Marthi</author>

  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/cl_utils</url>
  <url type="bugtracker">https://github.com/ros/roslisp_common/issues</url>
  <url type="repository">https://github.com/ros/roslisp_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>
  <run_depend>sbcl</run_depend> 
</package>
