<?xml version="1.0"?>
<package>
  <name>roslisp_utilities</name>
  <version>0.2.3</version>
  <description>
    Some utility functionality to interact with ROS using roslisp.
  </description>

  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roslisp_utilities</url>
  <url type="bugtracker">https://github.com/ros/roslisp_common/issues</url>
  <url type="repository">https://github.com/ros/roslisp_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>
  <build_depend>roslisp</build_depend>

  <run_depend>sbcl</run_depend> 
  <run_depend>roslisp</run_depend> 

</package>
